@@ -1,5 +1,8 @@
 Flukes Release Notes:
 ---------------------
+08/06/15:
+- Added color-coding of Twitter posts
+
 07/30/15:
 - Added resource availability query to request view
 
